[.ENV] Update the .env.example file

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,9 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
+OPENAI_API_KEY=key
+OPENAI_ORGANIZATION=organization
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
